chore: refactor exceptions