@@ -4,16 +4,14 @@ import lombok.Getter;
 
 @Getter
 public class OAuthException extends RuntimeException {
+    private static final String OAUTH_ERROR_MESSAGE = "OAuth error [%s]: %s";
+
     private final String errorCode;
     private final String errorDescription;
 
     public OAuthException(String errorCode, String errorDescription) {
-        super("OAuth error [%s]: %s".formatted(errorCode, errorDescription));
+        super(String.format(OAUTH_ERROR_MESSAGE, errorCode, errorDescription));
         this.errorCode = errorCode;
         this.errorDescription = errorDescription;
-    }
-
-    public static OAuthException invalidToken(String details) {
-        return new OAuthException("invalid_token", "token: " + details);
     }
 }
